# libx-msg-msc-msg

./: CMakeLists.txt  README.md  XmsgMscMsg.cpp  XmsgMscMsg.h  libx-msg-msc-msg.h
mgr/: XmsgImMgrNeNetLoad.h
msg/: XmsgMscSubNeGroupStatus.cpp  XmsgMscSubNeGroupStatus.h  XmsgNeAuth.cpp  XmsgNeAuth.h
